# agent-evidence

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  AGENT_EVIDENCE_FINAL_BOUNDARY_REPORT.md  AGENT_EVIDENCE_MOVE_MAP.md  AGENT_EVIDENCE_ROOT_INVENTORY.md  AI_DISCLOSURE.md  ARCHIVE_NOTES.md  ATTRIBUTION.md  CASE_MANIFEST.md  CHANGELOG.md  CHECKSUMS.sha256  CITATION.cff  CLAIM_BOUNDARY.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_LEDGER.jsonl  DEVELOPMENT_LEDGER.md  ENVIRONMENT.md  EXPECTED_RESULTS.md  Makefile  README.md  README.zh-CN.md  README_SE_CASES.md  README_SOFTWAREX_SUBMISSION.md  RECOMMENDATION_POLICY.md  RELEASE_NOTES.md  RELEASE_NOTES_AEP_MEDIA_v0.1.md  RELEASE_NOTES_SE_CASES_v0.1.0-rc2.md  RELEASE_NOTES_SE_CASES_v0.1.0-rc3.md  REPRODUCIBILITY.md  RUN_COMMANDS.md  SECURITY.md  SUPPORT.md  agent-index.json  agent-index.schema.json  codemeta.json  llms-full.txt  (+3 more)
.github/: pull_request_template.md
agent_evidence/: __init__.py  _canonical.py  anchor.py  export.py  manifest.py  media_adapter_evaluation.py  media_bundle.py  media_evaluation.py  media_final_journal_revision_pack.py  media_ieee_word_pack.py  media_optional_tools.py  media_profile.py  media_release_pack.py  media_submission_pack.py  media_time.py  models.py  oap.py  recorder.py  review_pack.py  serialization.py  validate_pack.py
assets/: README.md
demo/: .gitignore  README.md  build_aep_media_high_revision_pack.py  build_aep_media_ieee_word_pack.py  build_aep_media_release_pack.py  build_aep_media_submission_pack.py  expected-output.md  run_media_adapter_demo.py  run_media_bundle_demo.py  run_media_evaluation_demo.py  run_media_evidence_demo.py  run_media_time_demo.py  run_operation_accountability_demo.py  scenario.md
docs/: ACCEPTANCE-CHECKLIST.md  ADVISORY_VS_ENFORCE_MODE.md  AGENT_VALUE.md  CLAIM_SCOPE.md  COMMERCIAL_DELIVERY_SURFACE.md  CUSTOMER_QUICKSTART.md  ERROR_CODES.md  HISTORICAL_AND_ADJACENT_SURFACES.md  INSTALL_UNINSTALL_ROLLBACK.md  PAPER_BOUNDARY_FREEZE.md  PAPER_MAINLINE.md  QUICKSTART_FOR_AGENTS.md  README.md  REPRODUCE_PAPER_MINIMAL.md  SENSITIVE_DATA_HANDLING.md  STAGE1_WORKFLOW_HARDENING_SUMMARY.md  STATUS.md  SUPPORT_BOUNDARY.md  TROUBLESHOOTING.md  WORKFLOW_PERMISSIONS_REVIEW.md  abstract-en.md  boundary.md  callable-surfaces.md  case_protocol.md  codex-for-oss-maintainer-use.md  evidence-integrity-hardening-status.md  fdo-execution-evidence-profile-note.md  fdo-issue-2-follow-up-comment.md  for-agents.md  formal_model_alignment.md  high-risk-scenario-entry.md  how-to-cite.md  lineage.md  opentelemetry-to-eeoap-claim-boundary.md  opentelemetry-to-eeoap-evaluation.md  opentelemetry-to-eeoap-mapping.md  opentelemetry-to-eeoap-paper-claim.md  opentelemetry-to-eeoap-paper-outline.md  opentelemetry-to-eeoap-paper-skeleton.md  opentelemetry-to-eeoap-reviewer-notes.md  (+14 more)
examples/: README.md  basic_usage.py  evidence-object-openai-run.json  fdo-style-execution-evidence-object.json  invalid-high-risk-policy-link-broken.json  invalid-high-risk-unclosed-reference.json  invalid-missing-required.json  invalid-policy-link-broken.json  invalid-provenance-output-mismatch.json  invalid-trust-binding-digest-mismatch.json  invalid-unclosed-reference.json  invalid-validation-provenance-link-broken.json  io_trace_to_eeoap.json  langchain_minimal_evidence.py  minimal-evidence-object.json  minimal-valid-evidence.json  openai-agent-run.json  openai_compatible_minimal_evidence.py  sqlite_usage.py  valid-high-risk-payment-review-evidence.json  valid-trust-binding-evidence.json
experiments/: _common.py  exp1_synthetic.py  exp2_real_trace.py  exp3_noisy_recovery.py  exp4_determinism_oracle.py  generate_tables.py
external_submission_v1/: build_submission_summary.py
packaging/: commercial-delivery-surface.json
paper/: README.md  abstract.md  ai_use_declaration.md  bibliography-draft-not-final.md  citation-audit.md  cover_letter.md  data_availability_statement.md  draft.md  evaluation.md  formal-submission-checklist.md  highlights.txt  outline.md  paper.bib  paper.md  references.md  release-checklist.md  softwarex_osp_template_manuscript.docx  softwarex_v2_revised.md  source-verification-status.md  standards-facing-brief.md  submission-notes.md  venue-formatting-notes.md  verified-source-anchors.md
paper-ncs-execution-evidence/: NCS_EXECUTION_PLAN.md  README_START_HERE.md  repo_audit.md  repo_validator_config.json
plans/: implementation-plan.md
poster/: execution-evidence-object-poster-master.md  poster-taglines.md  qr-targets.md  title-options.md
proposal/: execution-evidence-object-proposal.md
protocol/: clause-index.json  manifest.json
release/: fdo-relevance.md  minimal-demo.md  objections-and-responses.md  overview.md  softwarex_v2_EDITORIAL_LOCKED_FINAL_manifest.json  specimen-manifest.md  what-this-is.md  why-it-matters.md
reports/: baseline_comparison.json  baseline_comparison.md  failure_code_coverage.json  failure_code_coverage.md  se_case_matrix.json  se_case_matrix.md
research/: README.md
roadmap/: conformance-profile-draft.md  minimum-interoperability-checklist.md  standardization-roadmap.md
schema/: aep_media_bundle_v0_1.schema.json  execution-evidence-object.schema.json  execution-evidence-operation-accountability-profile-v0.1.schema.json
tests/: __init__.py  (+52 more)
(+1272 files in other folders)
