[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-evidence"
version = "0.1.0"
description = "Evidence capture primitives for autonomous agent systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "zhangbin" }
]
dependencies = [
  "click>=8.1",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pre-commit>=3.7,<5.0",
  "ruff>=0.14,<1.0",
  "cryptography>=44,<46",
  "langchain-core>=1.2,<2.0",
  "sqlalchemy>=2.0,<3.0",
]
langchain = [
  "langchain>=1.0,<2.0",
  "langchain-core>=1.2,<2.0",
]
sql = [
  "sqlalchemy>=2.0,<3.0",
]
signing = [
  "cryptography>=44,<46",
]
postgres = [
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
]

[project.scripts]
agent-evidence = "agent_evidence.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agent_evidence*"]

[tool.setuptools.package-data]
agent_evidence = ["schema/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
