[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-evidence"
version = "0.1.0rc2"
description = "Evidence capture primitives for autonomous agent systems."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "zhangbin" }
]
keywords = [
  "ai-agents",
  "agent-evidence",
  "operation-accountability",
  "runtime-evidence",
  "offline-verification",
  "audit-trail",
  "json-schema",
  "validator",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "click>=8.1",
  "jsonschema>=4.23",
  "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/joy7758/agent-evidence"
Repository = "https://github.com/joy7758/agent-evidence"
Issues = "https://github.com/joy7758/agent-evidence/issues"
Documentation = "https://github.com/joy7758/agent-evidence/blob/main/README.md"
Citation = "https://doi.org/10.5281/zenodo.19334061"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "PyYAML>=6.0",
]
dev = [
  "pytest>=8.0",
  "pre-commit>=3.7,<5.0",
  "ruff>=0.14,<1.0",
  "cryptography>=46.0.7,<48",
  "defusedxml>=0.7,<1.0",
  "langchain-core>=1.2,<2.0",
  "openai-agents>=0.12,<1.0",
  "sqlalchemy>=2.0,<3.0",
]
langchain = [
  "langchain>=1.0,<2.0",
  "langchain-core>=1.2,<2.0",
]
openai-agents = [
  "openai-agents>=0.12,<1.0",
]
openai-compatible = [
  "openai>=2,<3",
]
mcp = [
  "mcp>=1.27,<2",
]
sql = [
  "sqlalchemy>=2.0,<3.0",
]
signing = [
  "cryptography>=46.0.7,<48",
]
xml = [
  "defusedxml>=0.7,<1.0",
]
postgres = [
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
]

[project.scripts]
agent-evidence = "agent_evidence.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agent_evidence*"]

[tool.setuptools.package-data]
agent_evidence = ["schema/*.json"]
"agent_evidence.aep" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
